change server dir

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -41,7 +41,7 @@ jobs:
         server: movie-lib-aji.rivaldy.space
         username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password}}
-        server-dir: /movie-lib-aji.rivaldy.space/
+        server-dir: /movie-lib-dir-aji.rivaldy.space/
         # NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
         # NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         # NETLIFY_DEPLOY_MESSAGE: "Prod deploy v${{ github.ref }}"
